--- a/css/style.css
+++ b/css/style.css
@@ -320,33 +320,57 @@ info.hoverBurg {
 
 .modal-win-content {
   font-family: 'Bernier Shade';
+  color: white;
+  font-weight: 100;
+  text-align: center;
+  font-size: 30px;
+  text-shadow: 1px 1px 1px blue;
+}
+.modal-win-content.startAnimation {
+  animation: modalwinAnimationSize 4s linear;
+}
+@keyframes modalwinAnimationSize {
+  0% {
+    color: rgba(255, 69, 0, 0.8);
+    font-size: 235px;
+  }
+  10% {
+    font-size: 215px;
+    color: rgba(255, 69, 0, 0.8);
+  }
+  20% {
+    font-size: 195px;
+    color: rgba(255, 69, 0, 0.8);
+  }
+  30% {
+    font-size: 175px;
+    color: rgba(255, 69, 0, 0.8);
+  }
+  40% {
+    font-size: 155px;
+    color: rgba(255, 69, 0, 0.8);
+  }
+  50% {
+    font-size: 135px;
+    color: rgba(255, 69, 0, 0.8);
+  }
+  60% {
+    font-size: 115px;
+  }
+  70% {
+    font-size: 95px;
+  }
+  80% {
+    font-size: 75px;
+  }
+  90% {
+    font-size: 55px;
+  }
+  100% {
     color: white;
-    font-weight: 100;
-    text-align: center;
     font-size: 30px;
-    text-shadow: 1px 1px 1px blue;
-  
- 
-      
+  }
 }
-.modal-win-content.startAnimation{
-      animation: modalwinAnimationSize 4s ease;
-}
-@keyframes modalwinAnimationSize{
-    0%{
-        color:   rgba(255, 69, 0, 0.8);
-        font-size: 235px;
-       
-    }
-    100%{
-         color: white;
-        font-size:  30px;
-        
-    }
-
-    
-}
-
 
 
 
