--- a/css/style.css
+++ b/css/style.css
@@ -713,6 +713,7 @@ info.hoverBurg {
         height: 70%;
         flex-direction: row;
         text-align: center;
+         margin-bottom: 20px;
     }
 /*update end*/
     .plus-icon {
